processed/gerrit/txt_full/35257.txt
Change:     35257
Subject:    LU-12447 utils: specify correct size for lfs project buffer
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/35257
Change-Id:  Ia6429c47391bf503546609ec6a262fe24664bdd4
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Wang Shilong
Created:    2019-06-18 00:51:48.000000000
Updated:    2019-06-21 04:36:58.000000000
Patch Set:  2
Insertions: +1
Deletions:  -1
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: Gu Zheng: +1; James Simmons: +1; Andreas Dilger: +1; Oleg Drokin: +2
  Verified: Jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Jenkins, Oleg Drokin, Andreas Dilger, Alex Zhuravlev, James Simmons, Gu Zheng

--- Commit Message ---
LU-12447 utils: specify correct size for lfs project buffer

Enviorment:
Fedora release 28 (Twenty Eight)

gcc (GCC) 8.0.1 20180324 (Red Hat 8.0.1-0.20)
Copyright (C) 2018 Free Software Foundation, Inc.

Hit build failure:
lfs_project.c: In function ‘lfs_project_item_alloc’:
lfs_project.c:72:2: error: ‘strncpy’ specified bound 4096
equals destination size [-Werror=stringop-truncation]
  strncpy(lpi->lpi_pathname, pathname, sizeof(lpi->lpi_pathname));
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Test-Parameters: trivial testlist=sanity-quota
Change-Id: Ia6429c47391bf503546609ec6a262fe24664bdd4
Signed-off-by: Wang Shilong <wshilong@ddn.com>
Reviewed-on: https://review.whamcloud.com/35257
Tested-by: Jenkins
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Gu Zheng <gzheng@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Wang Shilong, 2019-06-18 00:51:48.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2019-06-18 00:55:05.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2019-06-18 00:59:07.000000000) ---
Patch Set 1:

Build for x86_64 centos7 successful
Job output URL: http://testing.linuxhacker.ru:3333/lustre-reports/501/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-06-18 01:02:52.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (Jenkins, 2019-06-18 01:24:07.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/6131/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/65871/ : SUCCESS

--- Message (Autotest, 2019-06-18 01:24:59.000000000) ---
Patch Set 1:

Trevis Autotest started enforced custom session for build 65871. The following test parameters were specified: trivial=true testlist=sanity-quota.

--- Message (Autotest, 2019-06-18 01:24:59.000000000) ---
Patch Set 1:

Trevis Autotest started enforced review-ldiskfs-dne session for build 65871.

--- Message (Lustre Gerrit Janitor, 2019-06-18 01:44:43.000000000) ---
Patch Set 1:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs 

All results and logs: http://testing.linuxhacker.ru:3333/lustre-reports/501/results.html
Commencing standard testing: 
- conf-sanity@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity@zfs conf-sanity-slow@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (Maloo, 2019-06-18 02:47:03.000000000) ---
Patch Set 1:

Passed enforced test custom-101 on CentOS 7.0/x86_64 uploaded by Trevis Autotest from trevis-16vm9: https://testing.whamcloud.com/test_sessions/52cb35ba-006a-448c-a582-d7f872285513 ran 3 tests.

--- Message (Maloo, 2019-06-18 05:01:39.000000000) ---
Patch Set 1: Verified-1

Failed enforced test review-ldiskfs-dne on CentOS 7.0/x86_64 uploaded by Trevis Autotest from trevis-3vm5: https://testing.whamcloud.com/test_sessions/bf221d97-6429-4228-819f-1fd4f1185117 ran 4 tests.  1 tests failed: sanity.

--- Message (Lustre Gerrit Janitor, 2019-06-18 05:05:00.000000000) ---
Patch Set 1:

Even though "Test-Parameters: trivial" was detected, this deeply suspicious bot still run some testing
Testing has completed with errors!
IMPORTANT: these tests appear to be new failures unique to this patch
- conf-sanity-slow@zfs:test_69(NEW unique failure for this branch in the last 30 days, but was seen 0 times across 0 other branches 0 reviews)


> conf-sanity-slow@ldiskfs+DNE Failure(7533s)
- 69(create file after reformat) 111(add mds1 failed with new params) 
> conf-sanity-slow@zfs Failure(5652s)
- 69(OST replacement created too many inodes; 99613) 
> replay-dual@ldiskfs+DNE Timeout(593s)
> replay-single@ldiskfs+DNE Failure(7498s)
- 110f(1 != 2 after recovery) 
> sanity-lfsck@zfs Failure(1073s)
- 23b((9) Fail to repair dangling name entry: 0) 

Succeeded:
- conf-sanity@ldiskfs+DNE conf-sanity@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

All results and logs: http://testing.linuxhacker.ru:3333/lustre-reports/501/results.html

--- Message (Autotest, 2019-06-18 05:41:00.000000000) ---
Patch Set 1:

Trevis Autotest retesting enforced review-ldiskfs-dne session for build 65871. Requested by wangshilong because of LU-11170.

--- Message (Maloo, 2019-06-18 08:51:56.000000000) ---
Patch Set 1: Verified+1

Passed enforced test review-ldiskfs-dne on CentOS 7.0/x86_64 uploaded by Trevis Autotest from trevis-3vm5: https://testing.whamcloud.com/test_sessions/9176261c-3e0f-4b14-82e8-417f66a76622 ran 4 tests.

--- Message (Oleg Drokin, 2019-06-20 05:09:51.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Andreas Dilger, 2019-06-20 15:02:58.000000000) ---
Patch Set 1: Code-Review+1

--- Message (James Simmons, 2019-06-21 02:22:14.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Gu Zheng, 2019-06-21 02:34:28.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2019-06-21 04:36:55.000000000) ---
Patch Set 1: Code-Review+2

--- Message (unknown, 2019-06-21 04:36:58.000000000) ---
Change has been successfully cherry-picked as ffef6e3271ad1136d3ab1c2ee229b4690a6722a0 by Oleg Drokin
